7.x-1.4  2014-10-10
--------------------------
 - Replaced tid hardcoding during profile install with proper taxonomy_vocabulary_machine_name_load
 - Removed duplicates in dkan.make already present in dkan_dataset.make
 - Footer branding updated
 - Editable dkan blocks
 - Sort on search
 - New rebuild script to keep dkan updated on custom installs

7.x-1.3
-------
 - Issue #192 drupal security update 

7.x-1.2
-------
 - Issue #184 drupal security update
 - Updating makefile back to 7.x-1.x state
 - + 1.1 Release commit + changing git urls with https urls in order to travis to not fail during make
 - Changing git protocol to https for dkan_dataset, dkan_datastore and nuboot in order for travis build to success
 - Issue #166 updating nuboot for iframe link theme
 - Update dataset.inc fixed #150
 - Update README.md
 - Updating nuams references to NuCivic
 - Updating nuams references to NuCivic
 - Updating nuams references to Nucivic
 - Updating nuams references to NuCivic
 - Updating nuams references to NuCivic
 - Updating drupal-org.make to point to Nucivic
 - Updating drupal-org-dev.make to point to NuCivic
 - Moving to using URLs for make file instead of copying locally
 - Fixes issue #112: "downloald" typo in drupal-org.make
 - Changed 'The goal of the project combine...' to 'The goal of the project is to combine...'
 - Update .travis.yml
 - Adding information about google group
 - Adding key to drupal core to play nice with buildmanager
 - adding multi channel notifications for dkan
 - adding slack integration for travis
 - Update to make files

7.x-1.1
-------
 - Moved dkan development to Nucivic's github: https://github.com/NuCivic/dkan
 - Grabbing dkan_dataset.make and dkan_datastore.make fiels from github cdn
 - Several bugs fixed.
 - Moving to using URLs for make file instead of copying locally #160
 - Issue nuams/dkan#112: "downloald" typo in drupal-org.make #159
 - Fixing #151: Admin role defaults to "Editor" #158
 - Fix typo on About page #156