@@ -24,36 +24,6 @@ function dkan_additional_setup() {
   variable_set('node_access_needs_rebuild', FALSE);
   variable_set('gravatar_size', 190);
 
-  $tags_vocab = taxonomy_vocabulary_machine_name_load('tags');
-  $format_vocab = taxonomy_vocabulary_machine_name_load('format');
-
-  $tags = array(
-    'country-afghanistan',
-    'election',
-    'politics',
-    'transparency',
-    'municipal',
-    'price',
-    'time-series',
-  );
-  foreach ($tags as $tag) {
-    $term = new stdClass();
-    $term->vid = $tags_vocab->vid;
-    $term->vocabulary_machine_name = 'tags';
-    $term->name = $tag;
-    taxonomy_term_save($term);
-  }
-  $formats = array(
-    'csv',
-    'html',
-  );
-  foreach ($formats as $format) {
-    $term = new stdClass();
-    $term->vid = $format_vocab->vid;
-    $term->vocabulary_machine_name = 'format';
-    $term->name = $format;
-    taxonomy_term_save($term);
-  }
   // Make sure markdown editor installs correctly.
   module_load_include('install', 'markdowneditor', 'markdowneditor');
   _markdowneditor_insert_latest();
