@@ -2,7 +2,7 @@ name = DKAN Sitewide
 description = Sitewide elements for DKAN.
 core = 7.x
 package = DKAN
-version = 7.x-1.0
+version = 7.x-1.x
 project = dkan_sitewide
 dependencies[] = colorizer
 dependencies[] = context
