@@ -2,7 +2,6 @@ name = DKAN Sitewide Context
 description = Contexts for DKAN.
 core = 7.x
 package = DKAN
-version = 7.x-1.0-beta1
 project = dkan_sitewide_context
 dependencies[] = context
 dependencies[] = ctools
