@@ -1,7 +1,6 @@
 name = DKAN Sitewide Demo Front
 core = 7.x
 package = DKAN
-version = 7.x-1.0-beta1
 project = dkan_sitewide_demo_front
 dependencies[] = context
 dependencies[] = ctools
