@@ -2,7 +2,6 @@ name = DKAN Sitewide Menu
 description = Default menu settings for DKAN
 core = 7.x
 package = DKAN
-version = 7.x-1.0-beta1
 project = dkan_sitewide_menu
 dependencies[] = dkan_dataset
 dependencies[] = dkan_dataset_groups
