@@ -2,7 +2,6 @@ name = DKAN Sitewide Roles and Permissions
 description = Defines roles and permissions.
 core = 7.x
 package = DKAN
-version = 7.x-1.0-beta1
 project = dkan_sitewide_roles_perms
 dependencies[] = admin_menu
 dependencies[] = block
