@@ -2,7 +2,6 @@ name = DKAN Sitewide Search
 description = Adds search component using SQL instead of Solr
 core = 7.x
 package = DKAN
-version = 7.x-1.0-beta1
 project = dkan
 dependencies[] = context
 dependencies[] = ctools
